zellij-integration-tests/tests/snapshots/misc__previous_swap_layout.snap
---
source: zellij-integration-tests/tests/misc.rs
assertion_line: 135
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                                        Pane #1
                                                 <↓↑> [ Pane #2 ]
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
