zellij-integration-tests/tests/snapshots/misc__toggle_group_marking.snap
---
source: zellij-integration-tests/tests/misc.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1 
┌ Pane #1 ─────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────┐
│$                                                         ││$ █                                                       │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│ ┌ Multiple Pane Select ────────────────────────┐         ││                                                          │
│ │<ESC> - cancel, <TAB> - move                  │         ││                                                          │
│ │                                              │         ││                                                          │
│ │GROUP ACTIONS (1 SELECTED PANE)               │         ││                                                          │
│ │<b> - break out, <s> - stack, <c> - close     │         ││                                                          │
│ │<l> - break left, <r> - break right           │         ││                                                          │
│ │<e> - embed, <f> - float                      │         ││                                                          │
│ │                                              │         ││                                                          │
│ │Alt +  <p> Toggle  <Shift p> Follow Focus │         ││                                                          │
│ └──────────────────────────────────────────────┘         ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
