zellij-integration-tests/tests/snapshots/misc__write_byte_to_focused_pane_via_tmux_mode.snap
---
source: zellij-integration-tests/tests/misc.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
